# computing-webapp

./: README.md
src/frontend/: Cargo.toml  Trunk.toml  index.html
src/frontend/src/: main.rs
src/frontend/src/app/: body.rs  button.rs  mod.rs  triangle.rs
src/frontend/src/lib/: utils.rs
src/frontend/src/libs/: mod.rs
src/frontend/src/libs/rendering/: canvas.rs  mod.rs
src/frontend/src/libs/rendering/gl/: mod.rs  program.rs  shader.rs
src/frontend/src/libs/rendering/shaders/simple/: frag.glsl  mod.rs  vert.glsl
src/frontend/src/libs/tasks/: init_task.rs  mod.rs  task.rs
src/frontend/src/libs/types/: errors.rs  shared.rs
src/webgl-test/: Cargo.toml  index.html
src/webgl-test/src/: lib.rs
