[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.16.0-beta"
js-sys = "0.3.77"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
] }
tachys = "0.2.0"

[package.metadata.leptos]
style-file = "./style/output.css"
